--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <header>
-        <button aria-haspopup="true" aria-expanded="false" aria-label="Sections Navigation &amp; Search" class="er09x8g1 css-1uqx5yl" data-testid="nav-button" type="button">
+        <button="true" aria-expanded="false" aria-label="Sections Navigation &amp; Search" class="er09x8g1 css-1uqx5yl" data-testid="nav-button" type="button">
             <svg class="css-1fe7a5q" viewBox="0 0 16 16">
                 <rect x="1" y="3" fill="#333" width="14" height="2"></rect>
                 <rect x="1" y="7" fill="#333" width="14" height="2"></rect>
                 <rect x="1" y="11" fill="#333" width="14" height="2"></rect>
             </svg>
-        </button>
+            </button>
 
     </header>
 </body>
