Included and centered main photo / caption on going

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header__container flex">
             <button class="header__button" type="button">
-                <svg class="css-1fe7a5q" viewBox="0 0 16 16">
+                <svg class="menuIconSvg" viewBox="0 0 16 16">
                     <rect x="1" y="3" fill="#333" width="14" height="2"></rect>
                     <rect x="1" y="7" fill="#333" width="14" height="2"></rect>
                     <rect x="1" y="11" fill="#333" width="14" height="2"></rect>
@@ -36,6 +36,14 @@
             </div>
         </div>
     </header>
+    <main>
+        <h1>Space Ripples Reveal Big Bang’s Smoking Gun</h1>
+        <figure class="mainPhotoFigure">
+            <img class="mainPhotoImg" src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&auto=webp&disable=upscale">
+            <figcaption class="mainPhotoFigCaption">Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</figcaption>
+
+        </figure>
+    </main>
 </body>
 
 </html>
