Temporarily dividing css in many files for organizing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </title>
     <link data-rh="true" rel="shortcut icon" href="https://www.nytimes.com/vi-assets/static-assets/favicon-dark-81bb87c2422e6b661822b4c85eba8a5c.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/tags.css">
+    <link rel="stylesheet" href="css/classes.css">
 </head>
 
 <body>
@@ -40,9 +41,12 @@
         <h1>Space Ripples Reveal Big Bang’s Smoking Gun</h1>
         <figure class="mainPhotoFigure">
             <img class="mainPhotoImg" src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&auto=webp&disable=upscale">
-            <figcaption class="mainPhotoFigCaption">Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</figcaption>
+            <figcaption class="mainCaptionFigCaption">Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</figcaption>
+            <figcaption class="creditCaptionFigCaption">Rick Friedman for The New York Times</figcaption>
 
         </figure>
+        <p class="authorP">By Dennis Overbye</p>
+        <time>March 17, 2014</time>
     </main>
 </body>
 
