--- a/index.html
+++ b/index.html
@@ -8,13 +8,30 @@
         <link data-rh="true" rel="shortcut icon" href="https://www.nytimes.com/vi-assets/static-assets/favicon-dark-81bb87c2422e6b661822b4c85eba8a5c.ico" />
         <meta name="viewport" content="width=1200px, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/tags.css">
-        <link rel="stylesheet" href="css/classes.css">
-        <link rel="stylesheet" href="css/states.css">
-        <link rel="stylesheet" href="css/highlights.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body class="body">
+        <header class="header body__header">
+            <button class="menuButton header__menuButton" type="button">
+                    <svg class="menuButton__menuIconSvg" viewBox="0 0 16 16">
+                        <rect x="1" y="3" fill="#333" width="14" height="2">
+                        </rect>
+                        <rect x="1" y="7" fill="#333" width="14" height="2">
+                        </rect>
+                        <rect x="1" y="11" fill="#333" width="14" height="2">
+                        </rect>
+                    </svg>
+            </button>
+            <button class="searchButton header__searchButton" type="button">
+                <svg class="searchButton_icon" viewBox="0 0 16 16">
+                    <path fill="#333"
+                        d="M11.3,9.2C11.7,8.4,12,7.5,12,6.5C12,3.5,9.5,1,6.5,1S1,3.5,1,6.5S3.5,12,6.5,12c1,0,1.9-0.3,2.7-0.7l3.3,3.3c0.3,0.3,0.7,0.4,1.1,0.4s0.8-0.1,1.1-0.4c0.6-0.6,0.6-1.5,0-2.1L11.3,9.2zM6.5,10.3c-2.1,0-3.8-1.7-3.8-3.8c0-2.1,1.7-3.8,3.8-3.8c2.1,0,3.8,1.7,3.8,3.8C10.3,8.6,8.6,10.3,6.5,10.3z">
+                    </path>
+                </svg>
+            </button>
+            <a class="header__text" href="https://www.nytimes.com/section/science/space">Space & Cosmos</a>
+        </header>
 
     </body>
 
