--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
             </button>
         </header>
         <MAIN class="main">
-            <h1 class="main__title">Space Ripples Reveal Big Bang’s Smoking Gun
-            </h1>
+            <h1 class="main__title">Space Ripples Reveal Big Bang’s Smoking Gun</h1>
+            <img alt="Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago." class="css-11cwn6f" src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&amp;auto=webp&amp;disable=upscale"
+                srcset="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=90&amp;auto=webp 600w,https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-jumbo.jpg?quality=90&amp;auto=webp 1024w,https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-superJumbo.jpg?quality=90&amp;auto=webp 2048w"
+                sizes="((min-width: 600px) and (max-width: 1004px)) 84vw, (min-width: 1005px) 80vw, 100vw" decoding="async" itemprop="url" itemid="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&amp;auto=webp&amp;disable=upscale"
+                style="cursor: pointer;">
         </MAIN>
     </body>
 
